# simple_cmake_02_gtest

./: CMakeLists.txt  hello-world.cpp  mylib.cpp  mylib.hpp
tests/: CMakeLists.txt  hello_test.cpp
